# heterogeneity_code

./: .gitignore  README.md  bash_env.sh  environment.yml  pyproject.toml
configs/: project_params.toml
configs_local/: project_params.toml
scripts/a_build_Cij_PCs/: 1_build_portf_weights.py  2_build_Cij_PCs.py  build.py  build_Cij_PCs.py
scripts/a_build_Cij_PCs/slurm/: build_Cij_panel.sh
scripts/b_check_Cij_PCs/: check_Cij_PCs.py
scripts/build_Cij_PCs/slurm/: build_Cij_PCs.sh  build_Cij_PCs_params.sh  build_Cij_panel.sh  build_Cij_panel_20251218_153510.sbatch  build_Cij_panel_20251218_154051.sbatch  build_Cij_panel_20251222_121847_GREENE.sbatch  build_Cij_panel_params.sh
src/configs/: __init__.py  params.py  paths.py
src/heterogeneity_code/: README.md  __init__.py
src/heterogeneity_code/a01_nport_portshares/assetcat_port_shares/: a02_build_Cij_PCs.py
src/heterogeneity_code/a01_nport_portshares/za_scratch/: a_check_pca_assetcat_shares.py  za_security_port_shares.py
src/heterogeneity_code/a01_nport_portshares/zz_archive/: assetcat_portshares_funddistance.py
src/heterogeneity_code/a_nport_portshares/a_select_sample/: funds_that_hold_bonds.py
src/heterogeneity_code/a_nport_portshares/assetcat_port_shares/: a_build_port_weights.py  a_select_main_sample.py  b_build_Cij_PCs.py  b_build_port_weights.py
src/heterogeneity_code/configs/: __init__.py
src/heterogeneity_code/nport_portfolio_shares/: a_assetcat_portfolioshares.py
src/heterogeneity_code/z99_process_prospectuses/: 03_process_prospectuses.py
(+8 files in other folders)
