[project]
name = "heterogeneity_code"
authors = [{name = "..."}]
version = "0.1.0"
description = "Short description of the project."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # basic
    "pandas==2.3.3",
    "numpy==2.3.5",
    "sec-api==1.0.32",
    # process html
    "bs4==0.0.2",
    "lxml==6.0.2",
    # ML packages
    "scikit-learn==1.8.0",
    # own packages (DO NOT INSTALL IN HPC BC PATHS BREAK)
    # "pysfo @ file:///storage/Dropbox/01_main/dev/pysfo",
    # "clean_nport @ file:///storage/Dropbox/01_main/dev/clean_nport",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
